name:                warp-autoquit
version:             0.1.0.0
synopsis:            Automatically quit warp server when inactive.
description:         A haskell analog of "nodejs-autoquit" that was made in it's image, after it's likeness.
license:             BSD3
license-file:        LICENSE
author:              Al Zohali
maintainer:          Al Zohali <zohl@fmap.me>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
     CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/zohl/warp-autoquit.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

flag debug-connections
  description: Turn on output of connect/disconnect events.
  manual:      False
  default:     False

library
  exposed-modules:     Network.Wai.Handler.Warp.AutoQuit
  other-extensions:
  build-depends: base >=4.7 && < 5.0
               , data-default >= 0.7.1 && < 0.8
               , exceptions >= 0.8.3 && < 0.9
               , http-types >= 0.9.1 && < 0.10
               , time >= 1.6.0 && < 1.7
               , transformers >= 0.4.2 && < 0.5.3
               , bytestring >= 0.10.6 && < 0.11
               , unix >= 2.7.2 && < 2.8
               , wai >= 3.2.1 && < 3.3
  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall

  if flag(debug-connections)
    cpp-options: -DDebugConnections


test-suite tests
  type:           exitcode-stdio-1.0

  hs-source-dirs: tests
  main-is:        Main.hs

  build-depends: base >= 4.7 && < 5.0
               , bytestring >= 0.10.8 && < 0.11
               , data-default >= 0.7.1 && < 0.8
               , hspec
               , HTTP
               , http-types >= 0.9.1 && < 0.10
               , time >= 1.6.0 && < 1.7
               , transformers >= 0.4.2 && < 0.5.3
               , wai >= 3.2.1 && < 3.3
               , warp
               , warp-autoquit

  default-language:    Haskell2010
  ghc-options: -threaded

  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall

